fixed typos, reset notebooks

--- a/true_bayes.ipynb
+++ b/true_bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,23 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['0',\n",
-       " ' Emergency Room Reports',\n",
-       " 'REASON FOR THE VISIT:,  Very high PT/INR.,HISTORY: , The patient is an 81-year-old lady whom I met last month when she came in with pneumonia and CHF.  She was noticed to be in atrial fibrillation, which is a chronic problem for her.  She did not want to have Coumadin started because she said that she has had it before and the INR has had been very difficult to regulate to the point that it was dangerous, but I convinced her to restart the Coumadin again.  I gave her the Coumadin as an outpatient and then the INR was found to be 12.  So, I told her to come to the emergency room to get vitamin K to reverse the anticoagulation.,PAST MEDICAL HISTORY:,1.  Congestive heart failure.,2.  Renal insufficiency.,3.  Coronary artery disease.,4.  Atrial fibrillation.,5.  COPD.,6.  Recent pneumonia.,7.  Bladder cancer.,8.  History of ruptured colon.,9.  Myocardial infarction.,10.  Hernia repair.,11.  Colon resection.,12.  Carpal tunnel repair.,13.  Knee surgery.,MEDICATIONS:,1.  Coumadin.,2.  Simvastatin.,3.  Nitrofurantoin.,4.  Celebrex.,5.  Digoxin.,6.  Levothyroxine.,7.  Vicodin.,8.  Triamterene and hydrochlorothiazide.,9.  Carvedilol.,SOCIAL HISTORY:  ,She does not smoke and she does not drink.,PHYSICAL EXAMINATION:,GENERAL:  Lady in no distress.,VITAL SIGNS:  Blood pressure 100/46, pulse of 75, respirations 12, and temperature 98.2.,HEENT:  Head is normal.,NECK:  Supple.,LUNGS:  Clear to auscultation and percussion.,HEART:  No S3, no S4, and no murmurs.,ABDOMEN:  Soft.,EXTREMITIES:  Lower extremities, no edema.,ASSESSMENT:,1.  Atrial fibrillation.,2.  Coagulopathy, induced by Coumadin.,PLAN: , Her INR at the office was 12.  I will repeat it, and if it is still elevated, I will give vitamin K 10 mg in 100 mL of D5W and then send her home and repeat the PT/INR next week.  I believe at this time that it is too risky to use Coumadin in her case because of her age and comorbidities, the multiple medications that she takes and it is very difficult to keep an adequate level of anticoagulation that is safe for her.  She is prone to a fall and this would be a big problem.  We will use one aspirin a day instead of the anticoagulation.  She is aware of the risk of stroke, but she is very scared of the anticoagulation with Coumadin and does not want to use the Coumadin at this time and I understand.  We will see her as an outpatient.',\n",
-       " '0']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "file = open(\"new_train.csv\", \"r\", encoding='utf-8')\n",
     "data = list(csv.reader(file, delimiter=\",\"))\n",
@@ -40,17 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: 'Emergency Room Reports', 1: 'Surgery', 2: 'Radiology', 3: 'Podiatry', 4: 'Neurology', 5: 'Gastroenterology', 6: 'Orthopedic', 7: 'Cardiovascular / Pulmonary', 8: 'Nephrology', 9: 'ENT - Otolaryngology', 10: 'General Medicine', 11: 'Hematology - Oncology', 12: 'Cosmetic / Plastic Surgery', 13: 'SOAP / Chart / Progress Notes', 14: 'Chiropractic', 15: 'Psychiatry / Psychology', 16: 'Consult - History and Phy.', 17: 'Hospice - Palliative Care', 18: 'Neurosurgery', 19: 'Obstetrics / Gynecology', 20: 'Urology', 21: 'Discharge Summary', 22: 'Autopsy', 23: 'Dermatology', 24: 'Letters', 25: 'Office Notes', 26: 'Lab Medicine - Pathology', 27: 'Ophthalmology', 28: 'Speech - Language', 29: 'Dentistry', 30: 'Pediatrics - Neonatal', 31: 'Physical Medicine - Rehab', 32: 'Bariatrics', 33: 'Endocrinology', 34: 'Pain Management', 35: 'IME-QME-Work Comp etc.', 36: 'Allergy / Immunology', 37: 'Sleep Medicine', 38: 'Diets and Nutritions', 39: 'Rheumatology'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get a map from label numbers to names\n",
     "label_map = {}\n",
@@ -62,59 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: 0.015873015873015872,\n",
-       " 1: 0.21743512219702696,\n",
-       " 2: 0.05366591080876795,\n",
-       " 3: 0.008818342151675485,\n",
-       " 4: 0.04283194759385236,\n",
-       " 5: 0.044343663391282435,\n",
-       " 6: 0.072814310909549,\n",
-       " 7: 0.07785336356764928,\n",
-       " 8: 0.015873015873015872,\n",
-       " 9: 0.020660115898211137,\n",
-       " 10: 0.052658100277147894,\n",
-       " 11: 0.017132779037540943,\n",
-       " 12: 0.004787100025195263,\n",
-       " 13: 0.034013605442176874,\n",
-       " 14: 0.0030234315948601664,\n",
-       " 15: 0.011337868480725623,\n",
-       " 16: 0.10330057949105569,\n",
-       " 17: 0.0015117157974300832,\n",
-       " 18: 0.017888636936255985,\n",
-       " 19: 0.030990173847316706,\n",
-       " 20: 0.033761652809271854,\n",
-       " 21: 0.021919879062736205,\n",
-       " 22: 0.001763668430335097,\n",
-       " 23: 0.005291005291005291,\n",
-       " 24: 0.004787100025195263,\n",
-       " 25: 0.009574200050390527,\n",
-       " 26: 0.0012597631645250692,\n",
-       " 27: 0.016880826404635927,\n",
-       " 28: 0.002015621063240111,\n",
-       " 29: 0.005291005291005291,\n",
-       " 30: 0.013857394809775762,\n",
-       " 31: 0.004031242126480222,\n",
-       " 32: 0.003779289493575208,\n",
-       " 33: 0.004031242126480222,\n",
-       " 34: 0.013605442176870748,\n",
-       " 35: 0.0030234315948601664,\n",
-       " 36: 0.0015117157974300832,\n",
-       " 37: 0.0030234315948601664,\n",
-       " 38: 0.0022675736961451248,\n",
-       " 39: 0.0015117157974300832}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Find frequency of each label in training data\n",
     "def get_probabilities(data):\n",
@@ -133,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,26 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0.7956568303310714\n",
-      "1 0.8523403004482049\n",
-      "2 0.7508536202086405\n",
-      "3 0.7354380144401643\n",
-      "4 0.7646817178145245\n",
-      "5 0.8320737335578651\n",
-      "6 0.8960095139936183\n",
-      "7 0.7812623389515083\n",
-      "8 0.883453684720318\n",
-      "9 0.8576167387765959\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test model\n",
     "random.shuffle(data)\n",
@@ -327,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(list(zip(preds, t)))"
+    "print(list(zip(preds, ts)))"
    ]
   },
   {
