added spacy and memoization to improve performance

--- a/true_bayes.ipynb
+++ b/true_bayes.ipynb
@@ -8,7 +8,19 @@
    "source": [
     "import csv\n",
     "import numpy as np\n",
-    "import random"
+    "import random\n",
+    "import spacy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load('en_core_web_sm', disable=['tok2vec', 'parser', 'ner'])\n",
+    "stopwords = nlp.Defaults.stop_words\n",
+    "# stopwords = ['the','and','when','where','who']"
    ]
   },
   {
@@ -22,6 +34,27 @@
     "file.close()\n",
     "data = data[1:]\n",
     "data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(2023)\n",
+    "random.shuffle(data)\n",
+    "segments = []\n",
+    "for i in range(10):\n",
+    "    segments.append(data[(i*len(data))//10:((i+1)*len(data))//10])\n",
+    "\n",
+    "train_data = []\n",
+    "for i in range(10):\n",
+    "    train = []\n",
+    "    for j in range(10):\n",
+    "        if j != i:\n",
+    "            train.extend(segments[i])\n",
+    "    train_data.append(train)"
    ]
   },
   {
@@ -86,16 +119,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get full list of words that appear\n",
-    "def get_word_list(data):\n",
-    "    words = set()\n",
+    "tokenized_train_data = []\n",
+    "for data in train_data:\n",
+    "    curr = []\n",
     "    for sample in data:\n",
-    "        for word in tokenize(sample[2]):\n",
-    "            # Filter out common words\n",
-    "            if len(word) > 2 and word not in ['the','and','when','where','who']:\n",
-    "                words.add(word)\n",
-    "    return words\n",
-    "word_list = get_word_list(data)"
+    "        words = set(tokenize(sample[2]))\n",
+    "        curr.append(words)\n",
+    "    tokenized_train_data.append(curr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get full list of words that appear\n",
+    "def get_word_list(tokenized_data):\n",
+    "    ans = set()\n",
+    "    for words in tokenized_data:\n",
+    "        for word in words:\n",
+    "            if len(word) > 2 and word not in stopwords:\n",
+    "                ans.add(word)\n",
+    "    return ans"
    ]
   },
   {
@@ -105,14 +151,13 @@
    "outputs": [],
    "source": [
     "# Get frequency of words in data set\n",
-    "def get_word_frequencies(data):\n",
+    "def get_word_frequencies(tokenized_data):\n",
     "    word_frequencies = {}\n",
-    "    for sample in data:\n",
-    "        words = set(tokenize(sample[2]))\n",
+    "    for words in tokenized_data:\n",
     "        for word in words:\n",
     "            if word not in word_frequencies:\n",
     "                word_frequencies[word] = 0\n",
-    "            word_frequencies[word] += 1\n",
+    "        word_frequencies[word] += 1\n",
     "    s = sum(word_frequencies.values())\n",
     "    for word in word_frequencies:\n",
     "        word_frequencies[word] /= s\n",
@@ -127,12 +172,11 @@
    "source": [
     "# Create a look-up table for the probability of a sample being a given class\n",
     "# given a word w is in the sample\n",
-    "def create_lookup_table(word_list, data):\n",
+    "def create_lookup_table(word_list, data, tokenized_data):\n",
     "    counts = {}\n",
     "    table = {}\n",
     "    sample_sets = []\n",
-    "    for sample in data:\n",
-    "        word_set = set(tokenize(sample[2]))\n",
+    "    for word_set, sample in zip(tokenized_data, data):\n",
     "        k = int(sample[3])  # class\n",
     "        if k not in counts:\n",
     "            counts[k] = 0\n",
@@ -187,20 +231,11 @@
    "outputs": [],
    "source": [
     "# Test model\n",
-    "random.shuffle(data)\n",
-    "segments = []\n",
-    "for i in range(10):\n",
-    "    segments.append(data[(i*len(data))//10:((i+1)*len(data))//10])\n",
-    "for i in range(10):\n",
-    "    train = []\n",
-    "    for j in range(10):\n",
-    "        if j != i:\n",
-    "            train.extend(segments[i])\n",
-    "    test = segments[i]\n",
+    "for i, (test, train, tokenized_train) in enumerate(zip(segments, train_data, tokenized_train_data)):\n",
     "    probabilities = get_probabilities(train)\n",
-    "    word_list = get_word_list(train)\n",
-    "    prob_table = create_lookup_table(word_list, train)\n",
-    "    word_frequencies = get_word_frequencies(train)\n",
+    "    word_list = get_word_list(tokenized_train)\n",
+    "    prob_table = create_lookup_table(word_list, train, tokenized_train)\n",
+    "    word_frequencies = get_word_frequencies(tokenized_train)\n",
     "    correct = 0\n",
     "    preds = []\n",
     "    ts = []\n",
