--- a/true_bayes.ipynb
+++ b/true_bayes.ipynb
@@ -202,8 +202,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def naive_bayes(text, probabilities, prob_table, word_frequencies):\n",
-    "    words = set(tokenize(text))\n",
+    "def naive_bayes(text, probabilities, prob_table, word_frequencies, tokenized=False):\n",
+    "    words = text if tokenized else set(tokenize(text))\n",
     "    best_class = -1\n",
     "    best_prob = 0\n",
     "    for label in label_map:\n",
@@ -239,8 +239,8 @@
     "    correct = 0\n",
     "    preds = []\n",
     "    ts = []\n",
-    "    for sample in test:\n",
-    "        pred, _ = naive_bayes(sample[2], probabilities, prob_table, word_frequencies)\n",
+    "    for sample, text in zip(test, tokenized_train):\n",
+    "        pred, _ = naive_bayes(text, probabilities, prob_table, word_frequencies, tokenized=True)\n",
     "        if pred == int(sample[3]):\n",
     "            correct += 1\n",
     "        preds.append(pred)\n",
@@ -336,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.7.4"
   },
   "orig_nbformat": 4,
   "vscode": {
