lemmatized words with spacy

--- a/true_bayes.ipynb
+++ b/true_bayes.ipynb
@@ -99,18 +99,7 @@
    "outputs": [],
    "source": [
     "def tokenize(s):\n",
-    "    '''Filter out non-alphabet characters\n",
-    "    Standardize case\n",
-    "    Return list of words'''\n",
-    "    out = []\n",
-    "    cur = \"\"\n",
-    "    for c in s:\n",
-    "        if c.isalpha():\n",
-    "            cur += c.lower()\n",
-    "        elif len(cur) > 0:\n",
-    "            out.append(cur)\n",
-    "            cur = \"\"\n",
-    "    return out"
+    "    return [word.lemma_ for word in nlp(s)]"
    ]
   },
   {
