only keep open class words

--- a/true_bayes.ipynb
+++ b/true_bayes.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "nlp = spacy.load('en_core_web_sm', disable=['tok2vec', 'parser', 'ner'])\n",
     "stopwords = nlp.Defaults.stop_words\n",
-    "# stopwords = ['the','and','when','where','who']"
+    "open_class_words = (\"ADJ\", \"ADV\", \"INTJ\", \"NOUN\", \"PROPN\", \"VERB\")"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "def tokenize(s):\n",
-    "    return [word.lemma_ for word in nlp(s)]"
+    "    return [word.lemma_ for word in nlp(s) if word.pos_ in open_class_words]"
    ]
   },
   {
